--- a/src/scss/components/_background-text.scss
+++ b/src/scss/components/_background-text.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   right: -40rem;
-  font-size: min(25vw, 40rem);
+  font-size: 25rem;
   color: var(--black);
   opacity: 0.2;
   user-select: none;
