--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -30,7 +30,7 @@
       background-color: transparent;
       transform: skewX(10deg);
       padding: 2rem;
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       font-weight: 500;
       border: none;
       outline: none;
@@ -51,5 +51,11 @@
 @media only screen and (max-width: 768px) {
   .contact {
     margin-top: -3rem;
+
+    & input,
+    & textarea,
+    & button {
+      font-size: 1.5rem;
+    }
   }
 }
