--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -8,7 +8,7 @@
 
     &__title {
       font-family: "Monaco", "Courier New", Courier, monospace;
-      font-size: min(7vw, 8rem);
+      font-size: 8rem;
       font-weight: 200;
       color: var(--light-orange);
       text-shadow: 5px 5px 0px var(--dark-blue);
@@ -39,7 +39,7 @@
     &__subtitle {
       color: var(--light-orange);
       text-shadow: none;
-      font-size: min(7vw, 4rem);
+      font-size: 4rem;
       justify-self: center;
       font-family: "Snell Roundhand", cursive;
       font-weight: 700;
@@ -47,7 +47,7 @@
 
     &__content {
       text-shadow: none;
-      font-size: min(6vw, 3rem);
+      font-size: 3rem;
       color: var(--light-orange);
       font-family: var(--font);
       font-weight: 300;
@@ -79,10 +79,19 @@
 
     &__title {
       text-shadow: 1.5px 1.5px 0px var(--dark-blue);
+      font-size: 7vw;
 
       & a:hover {
         text-shadow: -1.5px -1.5px 0px var(--dark-blue);
       }
+    }
+
+    &__subtitle {
+      font-size: 7vw;
+    }
+
+    &__content {
+      font-size: 6vw;
     }
   }
 }
