--- a/src/scss/components/_work-element.scss
+++ b/src/scss/components/_work-element.scss
@@ -143,6 +143,7 @@
     width: 10rem;
     height: 10rem;
     border-radius: 0px 0px 5px 0;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
   }
 }
 
