--- a/src/scss/components/_work-element.scss
+++ b/src/scss/components/_work-element.scss
@@ -75,7 +75,7 @@
     &::after {
       display: inline-block;
       content: " ";
-      background-image: url(/public/ela.svg);
+      background-image: url(/public/images/ela.svg);
       background-size: 2rem 2rem;
       width: 2rem;
       height: 2rem;
